# passzilla

./: .gitignore  Cargo.toml  LICENSE  README.md  WIKI_CONTENT.md
.github/workflows/: rust-clippy.yml
src/: data.rs  main.rs  security.rs
