[package]
name = "password_manager_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
argon2 = "0.5.2"
aes-gcm = "0.10.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
rpassword = "7.4.0" # Read passwords in console applications.
rand = "0.8.5" # aes-gcm needs a random number generator
hkdf = "0.12.0"
sha2 = "0.10.8"
hex = "0.4.3"
generic-array = "0.14.7"
typenum = "1.17.0"
